css/style.css
* {
	box-sizing: border-box;
}


.WIP, .WIP a {
	color: black;
}
/* BODY PROPERTIES */

html {
	font-size: calc(6px + 1vw);
	line-height: calc(.5rem + 0.5vw);
}
body {
	background-color: #FCFCFC;
	font-family: Lato;
}
b {
	font-weight: 600;
}
i {
	font-style: italic;
}
h1 {
	font-size: calc(2.4rem + 1vw);
	letter-spacing: -.5px;
	line-height: calc( 3rem + 0.5vw);
}
h2 {
	font-size: calc(1.8rem + 1vw);
	letter-spacing: -.5px;
	line-height: calc( 2.1rem + 0.5vw);
}
h6 {
	font-family: Montserrat Subrayada;
	font-size: calc( 4rem + 1vw);
	font-weight: 900;
	letter-spacing: .75rem;
}
a {
	color: #FFF;
}
section {
	color: #312F30;
	margin-top: .5rem;
	padding: .5rem .5rem;
}
button.blue {
	color: #FFF;
	background: #1D02C2;
	border-top: .5rem solid #1D02C2;
	border-bottom: .5rem solid #1D02C2;
	border-left: .5rem solid #1D02C2;
	border-right: .5rem solid #1D02C2;
	font-family: Montserrat;
	font-size: calc(1.2rem + .7vw);
	font-weight: 500;
	width: 33vw;
}
button.blue:hover {
	letter-spacing: .05rem;
}
.buttonContainer {
	display: grid;
	empty-cells: show;
	grid-template-columns: 1fr .5fr 1fr;
	grid-gap: 1rem;
	margin: 0 auto;
	width: 98vw;
}
/* HEADER */

.header {
	background-color: #FFF;
	display: flex;
	height: 75px;
	justify-content: space-between;
	align-items: center;
	overflow: hidden;
	padding: .5rem 10px;
}
.header a {
	color: #1D02C2;
	float: left;
	font-family: Montserrat;
	font-size: calc(1.6rem + .1vw);
	font-weight: 700;
	line-height: calc(.5rem + 0.5vw);
	padding: 1.5vw;
	text-align: center;
	text-decoration: none;
}
.header a:hover {
	letter-spacing: .05rem;
	transition: .5s;
}
.header img {
	z-index:0;
}
.header-right {
	float: right;
	position: relative;
	z-index: 2;
}
/* HERO */

.heroContainer {
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 1fr 1.5fr 1fr;
	grid-gap: 1rem;
	margin: 0 auto;
	width: 95vw;
}
.logoBg img {
	grid-row: 1;
	grid-column: 1;
	position: absolute;
	max-width: 90vw;
	z-index: 0;
}
.largeSelf {
	grid-column: 2;
	grid-row: 1 /span 2;
	position: relative;
	top: -1rem;
	z-index: 1;
}
.largeSelf img {
	max-width: 20rem;
	width: 30vw;
}
.heroText {
	grid-column: 1 / -1;
	grid-row-start: 3;
	position: relative;
	top: -.75rem;
	z-index: 3;
}
/* MIDDLE DIV */

#space10 {
	letter-spacing: 1.5px;
}
.middleContainer {
	display: grid;
	empty-cells: show;
	justify-items: center;
	grid-template-columns: 1fr .15fr 1fr ;
	grid-template-rows: .5fr 1fr;
	grid-gap: 1rem;
	margin: 0 auto;
	width: 95vw;
}
.greenDiv {
	grid-column: 2;
	grid-row: 2;
}
.greenDiv img {
	width: 85vw;
}
.middleText {
	font-size: 2.2rem;
	font-weight: 300;
	grid-column: 2;
	grid-row: 1;
	padding-top: 1rem;
	padding-bottom: 1rem;
	width: 90vw;
}
.middleTextB {
	display: none;
}
/* GOAL BOOK */

.projectContainerG2 {
	display: grid;
	empty-cells: show;
	grid-template-columns: 1fr 3fr 1fr;
	grid-gap: 1rem;
	margin: 0 auto;
	padding-bottom: 5rem;
	width: 95vw;

	margin-top: 5rem;
}
.GBMtn2 {
	grid-column: 1 / span 3;
	grid-row: 3;
	z-index: 4;
}
.GBMtn2 img {
	width: 95vw;
}
.GBMtn1 {
	display: none;
}
.GBHeader {
	grid-row: 1;
	grid-column: 2 / 3;
	padding-top: 1.5rem;
	text-align: center;
	width: 75vw;
	z-index: 5;
}
.GBHeader p {
	font-family: Raleway;
	font-size: calc( 4rem + 1vw);
	font-weight: 900;
}
.GBMockup {
	grid-column: 1 / span 3;
	grid-row: 3;
	position: relative;
	bottom: 5rem;
	z-index: 6;
}
.GBsub {
	grid-column: 2;
	grid-row: 2;
	padding-bottom: 1rem;
	position: relative;
	text-align: center;
	width: 85vw;
	z-index: 7;
}
.GBsub h1 {
	font-size: 2rem;
	line-height: 2.5rem;
}
.studyButtonGB {
	grid-column: 2;
	grid-row: 1;
	z-index: 50;
	position: relative; top: -3rem;
}
.studyButtonGB a {
	text-decoration: none;
}

/* CACHE */

.projectContainer {
	display: grid;
	empty-cells: show;
	grid-template-columns: 1fr 3fr 1fr;
	grid-gap: 1rem;
	margin: 0 auto;
	margin-top: 5rem;
	justify-items: center;
	padding-bottom: 3rem;
	width: 95vw;
}
.cacheTriangle2 {
	grid-column: 1 / span 2;
	grid-row: 1 / span 2;
	z-index: 4;
}
.cacheHeader {
	grid-row: 1;
	grid-column: 2 / 3;
	padding-bottom: 5rem;
	padding-top: 1.5rem;
	text-align: center;
	width: 55vw;
	z-index: 5;
}
.cacheHeader p {
	font-family: Montserrat Subrayada;
	font-size: calc( 4rem + 1vw);
}
.cacheMockup {
	grid-column: 1 / span 3;
	grid-row: 2;
	position: relative;
	z-index: 6;
}
.cacheMockup img {
	width: 95vw;
}
.cacheSub {
	grid-column: 2;
	grid-row: 1;
	padding-top: 7rem;
	padding-bottom: 2rem;
	width: 85vw;
	text-align: center;
	z-index: 7;
}
.cacheSub h1 {
	font-size: 2rem;
	line-height: 2.5rem;
}
.studyButton {
	grid-column: 2;
	grid-row: 1;
	z-index: 50;
	position: relative; top: -3rem;
}
.studyButton a {
	text-decoration: none;
}
/* FOOTER */

.footerContainer {
	background-color: #FCFCFC;
	background-image: url("/images/footerBg.png");
	background-size: cover;
	border-top: 1rem solid #312F30;
	display: grid;
	empty-cells: show;
	grid-gap: .5rem;
	grid-template-columns: auto minmax(0, 1fr) auto;
	margin-top: 5rem;
	position: absolute;
	text-align: center;
	width: 100%;
}
.footerContainer a {
	color: #1D02C2;
}
.footerContainer a:hover {
	letter-spacing: .05rem;
	transition: .5s;
}
.footer1text {
	font-family: Montserrat;
	font-size: 2rem;
	font-weight: 500;
	grid-column: 2;
	grid-row: 1;
	padding-top: 2rem;
}
.footer2text {
	font-family: Montserrat;
	font-size: 3rem;
	font-weight: 700;
	grid-row: 2;
	grid-column: 2;
	padding-bottom: 1rem;
}
.gitIcon {
	grid-column: 2;
}
.gitIcon Img {
	height: 2.4rem;
	padding-left: 2rem;
	padding-right: 2rem;
}
.footer3text {
	grid-row: 4;
	font-size: 1.8rem;
	font-family: Encode Sans Condensed;
	padding-top: 1rem;
	margin-bottom: 2rem;
	grid-column: 2;
}
/*********************************************/

@media screen and (max-width: 415px) {
	.header-right {
		float: right;
	}
	.header-right a {
		padding-right: 1.75rem;
		font-size: calc(10px + 1vw);
	}
	.header-right a:hover {
		letter-spacing: normal;
	}
	.heroText h1 {
		font-size: 2.5rem;
	}
}
/********************************************/

@media screen and (min-width: 700px) {
	html {
		font-size: calc(8px + .3vw);
		line-height: calc(.5em + 0.5vw);
	}
	button.blue {
		width: 19rem;
	}
	button.blue:hover {
		letter-spacing: .05rem;
		transition: .5s;
	}
	.buttonContainer {
		display: grid;
		empty-cells: show;
		grid-template-columns: 1fr .15fr 1fr;
		grid-gap: 1rem;
		margin: 0 auto;
		width: 98vw;
	}

	/* ********************************************************************/
	.heroContainer {
		display: grid;
		empty-cells: show;
		grid-template-columns: .5fr 1fr .5fr;
		grid-template-rows: .5fr .2fr .2fr;
		grid-gap: 1rem;
		margin: 0 auto;
		position: relative;
		width: 95vw;
	}
	.logoBg {
		grid-column: 2;
	}
	.logoBg img {
		max-width: 45vw;
	}
	.largeSelf {
		grid-column: 3;
		grid-row: 2;
		z-index: 1;
	}
	.largeSelf img {
		position: relative; left: -15rem;
		width: 15vw;
	}

	.heroText {
		grid-column: 2 / span 3;
		grid-row-start: 3;
		position: relative;
		top: -.25rem;
		z-index: 3;
	}


	/* MIDDLE DIV */

	#space10 {
		letter-spacing: 1.5px;
	}
	.middleContainer {
		display: grid;
		empty-cells: show;
		grid-template-columns: 1fr .15fr  1fr;
		grid-template-rows: .5fr 1fr;
		grid-gap: 1rem;
		margin: 0 auto;
		padding-top: 8rem;
		position: relative;
		width: 95vw;
	}
	.greenDiv {
		grid-column: 2 / 3;
		grid-row: 2;
	}
	.greenDiv img {
		max-width: 45vw;
	}

	.middleText {
		font-size: 2.2rem;
		font-weight: 300;
		grid-column: 2;
		grid-row: 1;
		padding-top: 1rem;
		padding-bottom: 1rem;
		width: 45vw;
	}


	.projectContainer {
		display: grid;
		empty-cells: show;
		grid-template-columns: 1fr 3fr 1fr;
		grid-gap: 1rem;
		margin: 0 auto;
		margin-top: 10rem;
		justify-items: center;
		padding-bottom: 3rem;
		width: 95vw;
	}
	.cacheTriangle2 {
		grid-column: 1 / span 2;
		grid-row: 1 / span 2;
		z-index: 4;
	}
	.cacheHeader {
		grid-row: 1;
		grid-column: 2 / 3;
		padding-bottom: 5rem;
		padding-top: 1.5rem;
		text-align: center;
		width: 55vw;
		z-index: 5;
	}
	.cacheHeader p {
			font-family: Montserrat Subrayada;
			font-size: calc( 1rem + 5vw);
	}
	.cacheMockup {
		grid-column: 1 / span 3;
		grid-row: 2;
		position: relative;
		z-index: 6;
	}
	.cacheMockup img {
		width: 45vw;
	}
	.cacheSub {
		grid-column: 2;
		grid-row: 1;
		padding-top: 10rem;
		padding-bottom: 2rem;
		width: 35vw;
		text-align: center;
		z-index: 7;
	}
	.cacheSub h1 {
		font-size: calc( .8rem + 1vw);
		line-height: 2.5rem;
	}
	.studyButton {
		grid-column: 2;
		grid-row: 1;
		z-index: 50;
		position: relative; top: -3rem;
	}
	.studyButton a {
		text-decoration: none;
	}


/* GOAL BOOK */

.projectContainerG2 {
	justify-items: center;
}
.GBHeader p {
	font-size: calc( 1rem + 5vw);
}
.GBsub {
	grid-row: 2;
	max-width: 35vw;
}
.GBsub h1 {
	font-size: calc( .8rem + 1vw);
}
.GBMtn2 img {
	max-width: 45vw;
}
.studyButtonGB {
	grid-column: 2;
	z-index: 50;
}
}

